made a demo out of the graph that is in respect to student ranking

--- a/ranking.css
+++ b/ranking.css
@@ -12,3 +12,14 @@
 	stroke: black;
 	shape-rendering: crispEdges
 }
+
+div.tooltip {
+	background-color: lightsteelblue;
+	position: absolute;
+	text-align: center;
+	width: auto;
+	height: auto;
+	font: 12px sans-serif;
+	border-radius: 5px;
+	padding: 2px;
+}
