--- a/grade-distr.css
+++ b/grade-distr.css
@@ -66,3 +66,23 @@ div.tooltip {
 	shape-rendering: crispEdges
 
 }
+
+
+
+.helptext {
+ 	text-anchor: middle;
+ 	fill: darkgray;
+}
+
+circle {
+	radius: 3;
+  	fill: teal;
+  	stroke: teal;
+  	stroke-width: 10px;
+  	stroke-opacity: 0;
+}
+
+.ticks-desc {
+  	stoke: gray;
+  	font-size: 8pt;
+}
