--- a/grade-distr.css
+++ b/grade-distr.css
@@ -15,9 +15,30 @@
 	stroke: lightgrey;
 }
 
+#legend {
+	background-color: #fff;
+	border-radius: 10px;
+	width: 300px;
+	height: 150px;
+	padding: 10px;
+	margin-top: 5px;
+}
+
 #legend p {
 	margin-left: 15px;
 }
+
+#sliderbg { 
+	background-color: #fff;
+	border-radius: 10px;
+	width: 300px;
+	height: 95px;
+	padding: 10px 15px 0px 7px;
+	margin-top: 5px;
+	margin-bottom: 40px;
+}
+
+
 
 #total div,
 #average div,
@@ -67,8 +88,6 @@ div.tooltip {
 
 }
 
-
-
 .helptext {
  	text-anchor: middle;
  	fill: darkgray;
@@ -86,3 +105,4 @@ circle {
   	stoke: gray;
   	font-size: 8pt;
 }
+
