--- a/grade-distr.css
+++ b/grade-distr.css
@@ -102,7 +102,16 @@ circle {
 }
 
 .ticks-desc {
-  	stoke: gray;
   	font-size: 8pt;
+}
+
+.ygrid,
+.xgrid {
+	stroke: lightgray;
+	stroke-width: 1px;
+}
+
+.borderline {
+	stroke: black;
 }
 
