--- a/grade-distr.css
+++ b/grade-distr.css
@@ -6,6 +6,10 @@
 	text-align: center;
 }
 
+#column1 {
+	padding-top: 20px;
+}
+
 .chart rect {
 	stroke: white;
 	shape-rendering: crispEdges;
@@ -102,6 +106,10 @@ div.tooltip {
  	stroke: none;
 }
 
+.title {
+	text-anchor: middle;
+}
+
 circle {
 	radius: 3;
   	fill: teal;
@@ -124,3 +132,7 @@ circle {
 	stroke: black;
 }
 
+.indiv-yscale-label,
+.indiv-xscale-label {
+	font-size: 8px;
+}
