got the bar graph of attempts looking decent

--- a/attempts_distribution.css
+++ b/attempts_distribution.css
@@ -10,7 +10,8 @@
 .axis line {
 	fill: none;
 	stroke: black;
-	shape-rendering: crispEdges
+	shape-rendering: crispEdges;
+	font-size: 0.3em;
 }
 
 .diagonal {
