--- a/attempts_distribution.css
+++ b/attempts_distribution.css
@@ -75,3 +75,13 @@ div.tooltip {
 	border: 0px;      
   	pointer-events: none;         
 }
+
+
+.grid .tick {
+    stroke: lightgrey;
+    opacity: 0.7;
+    z-index: -1;
+}
+.grid path {
+      stroke-width: 0;
+}
