--- a/attempts_distribution.css
+++ b/attempts_distribution.css
@@ -76,12 +76,6 @@ div.tooltip {
   	pointer-events: none;         
 }
 
-
-.grid .tick {
-    stroke: lightgrey;
-    opacity: 0.7;
-    z-index: -1;
-}
-.grid path {
-      stroke-width: 0;
+.horizontal_line {
+	stroke: lightgrey;
 }
